--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
   
       <div class="footer-col-wrapper">
         <div class="footer-row">
-          <p>Symposium for Human-Computer Interaction</p>
+          <p>GBA HCI Symposium for Human-Computer Interaction</p>
         </div>
       </div>
   
