--- a/_sass/includes/_navbar.scss
+++ b/_sass/includes/_navbar.scss
@@ -15,7 +15,7 @@
 
 .site-header {
   padding: 2% 2% 1% 2%;
-  background: var(--background);
+  background: #f5f5f5;
   display: inline-block;
   float: left;
   width: 100%;
