--- a/_layouts/faculty.html
+++ b/_layouts/faculty.html
@@ -4,9 +4,24 @@ layout: page
 
 <head>
     <style>
-
     .figure-grid {
-        margin: 0 auto; /* 水平居中 */
+        display: grid;
+        grid-template-columns: repeat(4, 1fr); /* Change from auto-fit to auto-fill */
+        gap: 10px; /* 添加间距 */
+    }
+
+    @media screen and (max-width: 768px) {
+        .figure-grid {
+            grid-template-columns: repeat(3, 1fr); /* Adjust column width for smaller screens */
+            gap: 5px; /* 添加间距 */
+        }
+    }
+
+    @media screen and (max-width: 480px) {
+        .figure-grid {
+            grid-template-columns: repeat(2, 1fr); /* Adjust column width for smaller screens */
+            gap: 5px; /* 添加间距 */
+        }
     }
 
     .figure-grid img {
@@ -20,38 +35,17 @@ layout: page
         break-inside: avoid; /* 防止图片在列中断开 */
     }
 
-    .figure-grid-sizer,
-    .figure-grid-item {
-        width: 25%; /* 四列布局 */
-        text-align: center;
-    }
-
-    .figure-grid-item {
-        padding: 5px 5px; /* 增加左右内边距 */
-        box-sizing: border-box; /* 确保内边距不会增加元素的总宽度 */
-    }
-
-    /* 可选：针对小屏幕调整列数 */
-    @media screen and (max-width: 768px) {
-        .figure-grid-sizer,
-        .figure-grid-item {
-            width: 33.333%; /* 小屏幕上一列布局 */
-        }
-    }
-
-    @media screen and (max-width: 480px) {
-        .figure-grid-sizer,
-        .figure-grid-item {
-            width: 50%; /* 小屏幕上一列布局 */
-        }
-    }
-
     .image img {
     transition: transform 0.5s ease-in-out; /* 在0.5秒内平滑过渡 */
     }
 
     .image img:hover {
     transform: scale(1.02); /* 鼠标悬停时放大图片 */
+    }
+
+    .image-caption {
+        text-align: center; /* 居中文字 */
+        margin-top: 8px; /* 调整图片和文字之间的间距 */
     }
 
     .image-caption strong {
@@ -72,26 +66,4 @@ layout: page
 
 <body>
     {{ content }}
-    <!-- 引入 Masonry -->
-    <script src="/assets/js/masonry.pkgd.min.js"></script>
-    <!-- 引入 imagesLoaded -->
-    <script src="/assets/js/imagesloaded.pkgd.min.js"></script>
-    <script>
-        var grid = document.querySelector('.figure-grid');
-        var msnry = new Masonry(grid, {
-        itemSelector: '.figure-grid-item',
-        columnWidth: '.figure-grid-sizer',
-        percentPosition: true
-        });
-
-        imagesLoaded(grid).on('progress', function(instance, image) {
-            msnry.layout(); 
-        }).on('always', function() {
-            msnry.layout(); 
-        });
-
-        window.addEventListener('load', function() {
-            msnry.layout();
-        });
-    </script>
 </body>
