--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -40,7 +40,7 @@ html, html[data-theme="light"] {
   --code-background: #E0E0E0;
   --code-inline: #24292e;
   --text-shadow: #3f3f3f;
-  --text: #262626;
+  --text: #333333;
   --h1: #262626;
   --h2: #262626;
   --h3: #262626;
@@ -62,7 +62,7 @@ html[data-theme="dark"] {
   --code-background: #2A3444;
   --code-inline: #d9b600;
   --text-shadow: #2d333b; // text shadow
-  --text: #cdd9e5; // text
+  --text: #ffffff; // text
   --h1: #d40059; // headers
   --h2: #b37eff;
   --h3: #ff66c2;
