--- a/_layouts/faculty.html
+++ b/_layouts/faculty.html
@@ -61,6 +61,44 @@ layout: page
         font-size: 16px; /* 设置更小的字体大小 */
         line-height: 1.2; /* 根据需要调整行高 */
     }
+
+    .logo-react-grid {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr); /* Change from auto-fit to auto-fill */
+        gap: 5px; /* 添加间距 */
+    }
+
+    @media screen and (max-width: 1024px) {
+        .logo-react-grid {
+            grid-template-columns: repeat(4, 1fr); /* Adjust column width for smaller screens */
+            gap: 5px; /* 添加间距 */
+        }
+    }
+
+    @media screen and (max-width: 768px) {
+        .logo-react-grid {
+            grid-template-columns: repeat(3, 1fr); /* Adjust column width for smaller screens */
+            gap: 5px; /* 添加间距 */
+        }
+    }
+
+    @media screen and (max-width: 480px) {
+        .logo-react-grid {
+            grid-template-columns: repeat(2, 1fr); /* Adjust column width for smaller screens */
+            gap: 5px; /* 添加间距 */
+        }
+    }
+
+    .logo-react-grid img {
+        width: 100%; /* 使图片响应式 */
+        break-inside: avoid; /* 防止图片在列中断开 */
+    }
+
+    .logo-react-grid a img {
+        display: block; /* 防止图片下方出现间隙 */
+        width: 100%; /* 使图片响应式 */
+        break-inside: avoid; /* 防止图片在列中断开 */
+    }
     </style>
 </head>
 
