update logo and event

--- a/_includes/default/navbar.liquid
+++ b/_includes/default/navbar.liquid
@@ -3,12 +3,9 @@
   <div class="branding">
     {% if site.avatar %}
       <a href="{{ '/' | relative_url }}">
-        <img alt="logo img" class="avatar" src="{{ site.avatar | relative_url }}" loading="lazy"/>
+        <img alt="logo img" class="site-logo" src="{{ site.avatar | relative_url }}" loading="lazy"/>
       </a>
     {% endif %}
-    <a class="site-title" aria-label="{{ site.title }}" href="{{ '/' | relative_url }}">
-      {{ site.title }}
-    </a>
   </div>
 
   <nav class="clear">
@@ -33,8 +30,6 @@
         {% endunless %}
         {% assign name_page = page.title | append: name_page %}
       {% endfor %}
-
-
     </ul>
 
   </nav>
